# NinjaPatchScanner.cpp

./: CMakeLists.txt  NinjaPatchScanner.cpp  ReadMe.md  build.ninja
